--- a/views/devices.hbs
+++ b/views/devices.hbs
@@ -458,7 +458,7 @@ var chart=new Highcharts.chart('container', {
   }],
   yAxis: {
     title: {
-      text: 'Weight (kg)'
+      text: 'Weight (gr)'
     },
     min: 0
   },
